# ArgRE-code

./: .gitignore  AGENTS.md  MARE-QUARE-experiment-report-2026-02-17.md  MARE-iReDev-QUARE-comparison-report.md  README.md  ROADMAP.md  blind_study_data.json  pyproject.toml  requirements.txt  run_matrix.py
blind_substudy/: README.md  analyze_blind_substudy.py  blind_djs_sheet_R1.csv  blind_djs_sheet_R2.csv  blind_djs_sheet_R3.csv  generate_blind_substudy.py  rater_instructions.md  results.txt  reveal_mapping_substudy.json  selected_pairs.json
conflict_validation_study/: analyze_conflict_validation.py  conflict_validation_samples.json  extract_conflict_pairs.py  generate_validation_sheets.py  private_reveal_mapping_conflict.json
data/case_studies/: README.md
docs/: INCOSE_FORMAT_GUIDE.md  PRECISION_F1_CALCULATION_GUIDE.md  README.md  argre_paper_tables.md  methodology.md  orchestrator_agent_description.md  technical_specification.md
scripts/: anonymize_paths.py  blind_pairwise_lib.py  build_blind_eval_from_artifacts.py  build_blind_requirement_quality_eval.py  compare_blind_pairwise.py  run_blind_eval_artifact_generation.py  run_prompt_sensitivity_pilot.py
tests/: conftest.py  fake_iredev_llm.py  fake_mare_llm.py  smoke_test_model_access.py  test_auto_report_coverage.py  test_auto_report_workflow.py  test_comparison_harness_coverage.py  test_comparison_validator_coverage.py  test_core_coverage.py  test_dual_runtime_routing.py  test_llm.py  test_paper_verification_modules.py  test_pipeline_utils.py  test_quare_optional_artifacts.py  test_quare_phase2_behavior.py
(+485 files in other folders)
