[project]
name = "openre_bench"
version = "0.1.0"
description = "A fair and faithful implementation baseline for MARE."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic-settings>=2.10.0",
  "litellm>=1.0.0",
  "numpy>=2.0.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.5.0",
  "bert-score>=0.3.13",
]

[project.scripts]
openre_bench = "openre_bench.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
